# Animals_lab

./: Animal.cpp  Animal.h  CMakeLists.txt  ClassicFactory.cpp  ClassicFactory.h  Factory.cpp  Factory.h  Owner.cpp  Owner.h  input.txt  main.cpp
Animals/: Cat.cpp  Cat.h  Dog.cpp  Dog.h  Fish.cpp  Fish.h  Parrot.cpp  Parrot.h
